--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/jquery.simplyscroll.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
+    <script src="js/index.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
@@ -14,17 +18,16 @@
     />
   </head>
   <body>
-    <div class="con01">
+    <div id="con01">
       <div class="top">
-        <div class="logo"><h1>Web Design</h1></div>
+        <div class="logo">
+          <a href=""><h1>Web Design</h1></a>
+        </div>
         <div class="line01"></div>
         <div class="bar"><i class="fa-solid fa-bars"></i></div>
       </div>
       <div class="title">
-        <h2>
-          WEB DESIEN <br />
-          PORTOFOLIO
-        </h2>
+        <h2>WEB DESIEN <span> PORTOFOLIO</span></h2>
       </div>
       <div class="textBox">
         <img src="img/blackstar.svg" alt="" />
@@ -33,16 +36,16 @@
       </div>
       <div class="bottom">
         <div class="line02"></div>
-        <p>Portfolio / 2025</p>
+        <p>Portfolio - / 2025</p>
       </div>
       <div class="name">
         <img src="img/name.png" alt="" />
       </div>
       <div class="web">
-        <img src="img/web design.svg" alt="" />
+        <img src="img/webdesign.png" alt="" />
       </div>
       <div class="work">
-        <img src="img/works.svg" alt="" />
+        <img src="img/work.png" alt="" />
       </div>
     </div>
   </body>
