--- a/index.html
+++ b/index.html
@@ -1,52 +1,56 @@
 <!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="js/jquery-3.7.1.min.js"></script>
-    <script src="js/jquery.simplyscroll.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
-    <script src="js/index.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <div id="con01">
-      <div class="top">
-        <div class="logo">
-          <a href=""><h1>Web Design</h1></a>
+  <html lang="ko">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Document</title>
+      <!-- js -->
+      <script src="js/jquery-3.7.1.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
+      <script src="js/index.js"></script>
+      <!-- css -->
+      <link rel="stylesheet" href="css/style.css" />
+      <!-- icon -->
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+      />
+    </head>
+    <body>
+      <div id="con01">
+        <div class="top">
+          <div class="logo">
+            <a href=""><h1>Web Design</h1></a>
+          </div>
+          <div class="line01"></div>
+          <div class="bar"><i class="fa-solid fa-bars"></i></div>
         </div>
-        <div class="line01"></div>
-        <div class="bar"><i class="fa-solid fa-bars"></i></div>
+        <div class="title">
+          <h2>WEB DESIEN <span> PORTFOLIO</span></h2>
+        </div>
+        <div class="textBox">
+          <img src="img/blackstar.svg" alt="" />
+          <p>PORTFOLIO 2025</p>
+          <img src="img/blackstar.svg" alt="" />
+        </div>
+        <div class="bottom">
+          <div class="line02"></div>
+          <p>Portfolio - / 2025</p>
+        </div>
+        <div class="name">
+          <img src="img/name.png" alt="" />
+        </div>
+        <div class="web">
+          <img src="img/webdesign.png" alt="" />
+        </div>
+        <div class="work">
+          <img src="img/work.png" alt="" />
+        </div>
       </div>
-      <div class="title">
-        <h2>WEB DESIEN <span> PORTOFOLIO</span></h2>
-      </div>
-      <div class="textBox">
-        <img src="img/blackstar.svg" alt="" />
-        <p>PORTOFLIO 2025</p>
-        <img src="img/blackstar.svg" alt="" />
-      </div>
-      <div class="bottom">
-        <div class="line02"></div>
-        <p>Portfolio - / 2025</p>
-      </div>
-      <div class="name">
-        <img src="img/name.png" alt="" />
-      </div>
-      <div class="web">
-        <img src="img/webdesign.png" alt="" />
-      </div>
-      <div class="work">
-        <img src="img/work.png" alt="" />
-      </div>
-    </div>
-  </body>
-</html>
+    </body>
+  </html>
+</!DOCTYPE>
