--- a/index.html
+++ b/index.html
@@ -1,46 +1,36 @@
 <!DOCTYPE html>
-  <html lang="ko">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Document</title>
-      <!-- js -->
-      <script src="js/jquery-3.7.1.min.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <!-- js -->
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
-      <script src="js/index.js"></script>
-      <!-- css -->
-      <link rel="stylesheet" href="css/style.css" />
-      <!-- icon -->
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />
-    </head>
-    <body>
-      <div id="con01">
-        <div class="top">
-          <div class="logo">
-            <a href=""><h1>Web Design</h1></a>
-          </div>
-          <div class="line01"></div>
-          <div class="bar"><i class="fa-solid fa-bars"></i></div>
+    <script src="js/index.js"></script>
+    <!-- css -->
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <div id="con01">
+      <div class="top">
+        <div class="logo">
+          <a href=""><h1>Web Design</h1></a>
         </div>
-        <div class="title">
-          <h2>WEB DESIEN <span> PORTFOLIO</span></h2>
-        </div>
-        <div class="textBox">
-          <img src="img/blackstar.svg" alt="" />
-          <p>PORTFOLIO 2025</p>
-          <img src="img/blackstar.svg" alt="" />
-        </div>
-        <div class="bottom">
-          <div class="line02"></div>
-          <p>Portfolio - / 2025</p>
-        </div>
+        <div class="line01"></div>
+        <div class="bar"><i class="fa-solid fa-bars"></i></div>
+      </div>
+      <div class="title">
+        <h2>WEB DESIEN <span> PORTFOLIO</span></h2>
         <div class="name">
           <img src="img/name.png" alt="" />
         </div>
@@ -51,6 +41,37 @@
           <img src="img/work.png" alt="" />
         </div>
       </div>
-    </body>
-  </html>
-</!DOCTYPE>
+      <div class="textBox">
+        <img src="img/blackstar.svg" alt="" />
+        <p>PORTFOLIO 2025</p>
+        <img src="img/blackstar.svg" alt="" />
+      </div>
+      <div class="bottom">
+        <div class="line02"></div>
+        <p>Portfolio - / 2025</p>
+      </div>
+    </div>
+    <div id="con02">
+      <div class="left">
+        <div class="aboutMe">
+          <h2>ABOUT <span>ME</span></h2>
+          <div class="design"><img src="img/web design01.png" alt="" /></div>
+        </div>
+        <div class="text">
+          <p>
+            안녕하세요<br />
+            책임감과 성실함으로 디자인을 완성하는 웹디자이너 안미나 입니다 보기
+            좋고 실용적인 웹사이트를 만들고 싶은 마음으로 웹디자이너가
+            되고싶습니다 앞으로도 꾸준히 배우고 성장하면 저만의 색을 담은
+            웹디자이너를 해 나가고 싶습니다
+          </p>
+        </div>
+      </div>
+      <div class="right">
+        <div class="hi"><img src="img/hi.png" alt="" /></div>
+        <div class="imgBox"><img src="img/myself.png" alt="" /></div>
+        <div class="hello"><img src="img/hello.png" alt="" /></div>
+      </div>
+    </div>
+  </body>
+</html>
