--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     />
   </head>
   <body>
-    <div id="con01">
-      <div class="top">
-        <div class="logo">
-          <a href=""><h1>Web Design</h1></a>
-        </div>
-        <div class="line01"></div>
-        <div class="bar"><i class="fa-solid fa-bars"></i></div>
+    <header>
+      <div class="logo">
+        <a href="index.html"><h1>Web Design</h1></a>
       </div>
+      <div class="line01"></div>
+      <div class="bar"><i class="fa-solid fa-bars"></i></div>
+    </header>
+    <div id="con01">
       <div class="title">
         <h2>WEB DESIEN <span> PORTFOLIO</span></h2>
         <div class="name">
@@ -52,25 +52,26 @@
       </div>
     </div>
     <div id="con02">
-      <div class="left">
-        <div class="aboutMe">
-          <h2>ABOUT <span>ME</span></h2>
-          <div class="design"><img src="img/web design01.png" alt="" /></div>
+      <div class="aboutWrap">
+        <div class="left">
+          <div class="aboutMe">
+            <h2>ABOUT <span>ME</span></h2>
+            <div class="design"><img src="img/web design01.png" alt="" /></div>
+          </div>
+          <div class="textBox">
+            <span class="text"></span>
+            <span class="blink">|</span>
+          </div>
         </div>
-        <div class="text">
-          <p>
-            안녕하세요<br />
-            책임감과 성실함으로 디자인을 완성하는 웹디자이너 안미나 입니다 보기
-            좋고 실용적인 웹사이트를 만들고 싶은 마음으로 웹디자이너가
-            되고싶습니다 앞으로도 꾸준히 배우고 성장하면 저만의 색을 담은
-            웹디자이너를 해 나가고 싶습니다
-          </p>
+        <div class="right">
+          <div class="hi"><img src="img/hi.png" alt="" /></div>
+          <div class="imgBox"><img src="img/myself.png" alt="" /></div>
+          <div class="hello"><img src="img/hello.png" alt="" /></div>
         </div>
       </div>
-      <div class="right">
-        <div class="hi"><img src="img/hi.png" alt="" /></div>
-        <div class="imgBox"><img src="img/myself.png" alt="" /></div>
-        <div class="hello"><img src="img/hello.png" alt="" /></div>
+      <div class="bottom">
+        <div class="line02"></div>
+        <p>Portfolio - / 2025</p>
       </div>
     </div>
   </body>
