--- a/index.html
+++ b/index.html
@@ -77,5 +77,161 @@
         <p>Portfolio - / 2025</p>
       </div>
     </div>
+    <div id="con03">
+      <div class="bg">
+        <img src="img/flower.png" alt="" />
+      </div>
+      <div class="profile">
+        <img src="img/profile.svg" alt="" />
+      </div>
+      <div class="bg01">
+        <img src="img/pinkstar.png" alt="" />
+      </div>
+      <div class="textWarp">
+        <ul class="profileTop">
+          <li>
+            <div class="education"><img src="img/education.png" alt="" /></div>
+            <h3>EDUCATION</h3>
+            <p>2007 . 2 소명여자고등학교</p>
+            <p>2009 . 3 동아방송예술대학 졸업</p>
+            <p>2025 . 12 ~ 2025 .6 html css 청년취업활동</p>
+          </li>
+          <li>
+            <div class="skill"><img src="img/skill.png" alt="" /></div>
+            <h2>SKILL</h2>
+            <img src="img/skill01.svg" alt="" />
+          </li>
+        </ul>
+        <ul class="profileBottom">
+          <li>
+            <div class="career"><img src="img/career.png" alt="" /></div>
+            <h3>CAREER</h3>
+            <p>2025 . 12 ~ 2025 .6 html css 청년취업 활동</p>
+          </li>
+          <li>
+            <div class="certificate">
+              <img src="img/certificate.png" alt="" />
+            </div>
+            <h3>CERTIFICATE</h3>
+            <p class="text01">2025 .5 GTQ 포토샵 1급 자격증</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div id="con04">
+      <div class="title">
+        <img src="img/project.svg" alt="" />
+      </div>
+
+      <div class="bg02">
+        <img src="img/hellopink.svg" alt="" />
+      </div>
+      <section class="project">
+        <div class="cloneWrap">
+          <ul class="contBox">
+            <li class="left">
+              <a href="https://llanminall.github.io/cafe/">
+                <div class="img">
+                  <img src="img/jiyugaoka.png" alt="" />
+                </div>
+              </a>
+            </li>
+            <li class="right">
+              <div class="tit">
+                Clone Coding
+                <p class="en2">JIYUGAOKA</p>
+              </div>
+              <div class="txtBox">
+                <p class="en3">
+                  전체적 레이아웃제작에 대한 이해 및 실혁향상을 위해 국내
+                  기업사이트 중 모바일 버전과 웹사이트버전이 다른 버전으로
+                  구조적인것을 알기 위해 이 웹사이트를 선정하여 Clone Coding으로
+                  퍼블리싱 실력을 키우기위해 노력하였습니다
+                </p>
+                <ul class="skill on">
+                  <li>html css</li>
+                  <li>jQuery</li>
+                  <li>PC Web</li>
+                  <li>Mobile</li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="project01">
+        <div class="cloneWrap">
+          <ul class="contBox">
+            <li class="left">
+              <a href="https://llanminall.github.io/spc/">
+                <div class="img">
+                  <img src="img/spc.png" alt="" />
+                </div>
+              </a>
+            </li>
+            <li class="right">
+              <div class="tit">
+                Clone coding
+                <p class="en2">SPC</p>
+              </div>
+              <div class="txtBox">
+                <p class="en3">
+                  전체적 레이아웃제작에 대한 이해 및 실혁향상을 위해 국내
+                  기업사이트 중 모바일 버전과 웹사이트버전이 다른 버전으로
+                  구조적인것을 알기 위해 이 웹사이트를 선정하여 Clone Coding으로
+                  퍼블리싱 실력을 키우기위해 노력하였습니다
+                </p>
+                <ul class="skill on">
+                  <li>html css</li>
+                  <li>jQuery</li>
+                  <li>PC Web</li>
+                  <li>Mobile</li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="project02">
+        <div class="cloneWrap">
+          <ul class="contBox">
+            <li class="left">
+              <a href="https://llanminall.github.io/spc/">
+                <div class="img">
+                  <img src="img/spc.png" alt="" />
+                </div>
+              </a>
+            </li>
+            <li class="right">
+              <div class="tit">
+                Clone coding
+                <p class="en2">SPC</p>
+              </div>
+              <div class="txtBox">
+                <p class="en3">
+                  전체적 레이아웃제작에 대한 이해 및 실혁향상을 위해 국내
+                  기업사이트 중 모바일 버전과 웹사이트버전이 다른 버전으로
+                  구조적인것을 알기 위해 이 웹사이트를 선정하여 Clone Coding으로
+                  퍼블리싱 실력을 키우기위해 노력하였습니다
+                </p>
+                <ul class="skill on">
+                  <li>html css</li>
+                  <li>jQuery</li>
+                  <li>PC Web</li>
+                  <li>Mobile</li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </div>
+    <div id="con05">
+      <div class="illustration">
+        <img src="img/illustration.svg" alt="" />
+      </div>
+      <div class="bg03"><img src="img/bluestar.png" alt="" /></div>
+      
+    </div>
   </body>
 </html>
