--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/jquery.simplyscroll.min.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- icon -->
@@ -231,7 +232,106 @@
         <img src="img/illustration.svg" alt="" />
       </div>
       <div class="bg03"><img src="img/bluestar.png" alt="" /></div>
-      
+      <div class="bg04">
+        <img src="img/work.png" alt="" />
+      </div>
+      <div class="ilustWrap">
+        <ul class="ilust01">
+          <li class="a">
+            <img src="img/coffe-illust.jpg" alt="" />
+          </li>
+          <li class="b">
+            <img src="img/jazz-illust.jpg" alt="" />
+          </li>
+          <li class="c">
+            <img src="img/korea-illust.jpg" alt="" />
+          </li>
+          <li class="c">
+            <img src="img/2.png" alt="" />
+          </li>
+          <li class="b">
+            <img src="img/5.png" alt="" />
+          </li>
+          <li class="c">
+            <img src="img/7.png" alt="" />
+          </li>
+        </ul>
+      </div>
+      <div class="ilustModal">
+        <ul class="ilust02">
+          <li>
+            <img src="img/coffe-illust.jpg" alt="" />
+          </li>
+          <li>
+            <img src="img/jazz-illust.jpg" alt="" />
+          </li>
+          <li>
+            <img src="img/korea-illust.jpg" alt="" />
+          </li>
+          <li>
+            <img src="img/2.png" alt="" />
+          </li>
+          <li>
+            <img src="img/5.png" alt="" />
+          </li>
+          <li>
+            <img src="img/7.png" alt="" />
+          </li>
+        </ul>
+      </div>
+
+      <div class="bottom">
+        <div class="line02"></div>
+        <p>Portfolio - / 2025</p>
+      </div>
+    </div>
+    <div id="con06">
+      <div class="potoshop"><img src="img/photoshop.svg" alt="" /></div>
+      <div class="bg05"><img src="img/webtext.svg" alt="" /></div>
+      <div class="bg06"><img src="img/minstar.svg" alt="" /></div>
+      <ul class="photoshopList">
+        <li><img src="img/Vintage befor.PNG" alt="" /></li>
+        <li><img src="img/vintage after.PNG" alt="" /></li>
+        <li><img src="img/forestbefore.jpg" alt="" /></li>
+        <li><img src="img/forestafter.PNG" alt="" /></li>
+        <li><img src="img/fantasyafter.PNG" alt="" /></li>
+        <li><img src="img/soap bubblesbefore.png" alt="" /></li>
+        <li><img src="img/soap bubblesafter.png" alt="" /></li>
+        <li><img src="img/starbefore.PNG" alt="" /></li>
+        <li><img src="img/starafter.PNG" alt="" /></li>
+        <li><img src="img/whalebefore.png" alt="" /></li>
+        <li><img src="img/whaleafter.png" alt="" /></li>
+      </ul>
+      <div class="bottom">
+        <div class="line02"></div>
+        <p>Portfolio - / 2025</p>
+      </div>
+    </div>
+    <div id="con07">
+      <ul class="contact">
+        <li>
+          <h2>THANKS <span>FOR</span> <span>WATCHING</span></h2>
+          <div class="textBox02">
+            <p class="txt01">
+              저는 주어진 일에 대해 책임감을 가지고 모든 작업을 성실히 수행하는
+              자세를 중요하게 생각해 앞으로도 성실하게 발전하고 책임감있는
+              디자이너로 성장해 나가겠습니다．
+            </p>
+            <p class="txt02">지금까지 읽어주셔서 감사합니다.</p>
+          </div>
+        </li>
+        <li>
+          <div class="bg07"><img src="img/flower.png" alt="" /></div>
+          <div class="bg08"><img src="img/name.png" alt="" /></div>
+          <div class="bg09"><img src="img/contact.svg" alt="" /></div>
+          <div class="telContact"><img src="img/contact-tel.svg" alt="" /></div>
+        </li>
+      </ul>
+
+      <div class="bottom">
+        <div class="line02"></div>
+        <p>Portfolio - / 2025</p>
+      </div>
     </div>
   </body>
 </html>
