--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <li>
             <div class="career"><img src="img/career.png" alt="" /></div>
             <h3>CAREER</h3>
-            <p>2025 . 12 ~ 2025 .6 html css 청년취업 활동</p>
+            <p>2008 . 12 ~ 2025 .11 패션스타일리스트취업</p>
           </li>
           <li>
             <div class="certificate">
@@ -247,13 +247,13 @@
             <img src="img/korea-illust.jpg" alt="" />
           </li>
           <li class="c">
-            <img src="img/2.png" alt="" />
+            <img src="img/Environment-illust.jpg" alt="" />
           </li>
           <li class="b">
             <img src="img/5.png" alt="" />
           </li>
           <li class="c">
-            <img src="img/7.png" alt="" />
+            <img src="img/2.png" alt="" />
           </li>
         </ul>
       </div>
@@ -269,13 +269,13 @@
             <img src="img/korea-illust.jpg" alt="" />
           </li>
           <li>
-            <img src="img/2.png" alt="" />
+            <img src="img/Environment-illust.jpg" alt="" />
           </li>
           <li>
             <img src="img/5.png" alt="" />
           </li>
           <li>
-            <img src="img/7.png" alt="" />
+            <img src="img/2.png" alt="" />
           </li>
         </ul>
       </div>
@@ -286,14 +286,17 @@
       </div>
     </div>
     <div id="con06">
-      <div class="potoshop"><img src="img/photoshop.svg" alt="" /></div>
-      <div class="bg05"><img src="img/webtext.svg" alt="" /></div>
-      <div class="bg06"><img src="img/minstar.svg" alt="" /></div>
+      <div class="potoshop">
+        <img src="img/photoshop.svg" alt="photoshop제목" />
+      </div>
+      <div class="bg05">
+        <img src="img/webtext.svg" alt="웹디자인이미지박스" />
+      </div>
+      <div class="bg06"><img src="img/minstar.svg" alt="민트색별모양" /></div>
       <ul class="photoshopList">
-        <li><img src="img/Vintage befor.PNG" alt="" /></li>
-        <li><img src="img/vintage after.PNG" alt="" /></li>
         <li><img src="img/forestbefore.jpg" alt="" /></li>
         <li><img src="img/forestafter.PNG" alt="" /></li>
+        <li><img src="img/fantasybefore.PNG" alt="" /></li>
         <li><img src="img/fantasyafter.PNG" alt="" /></li>
         <li><img src="img/soap bubblesbefore.png" alt="" /></li>
         <li><img src="img/soap bubblesafter.png" alt="" /></li>
@@ -302,6 +305,10 @@
         <li><img src="img/whalebefore.png" alt="" /></li>
         <li><img src="img/whaleafter.png" alt="" /></li>
       </ul>
+      <div class="btnWrap">
+        <img src="img/arrow01.png" alt="" />
+        <img src="img/arrow02.png" alt="" />
+      </div>
       <div class="bottom">
         <div class="line02"></div>
         <p>Portfolio - / 2025</p>
@@ -321,10 +328,12 @@
           </div>
         </li>
         <li>
-          <div class="bg07"><img src="img/flower.png" alt="" /></div>
-          <div class="bg08"><img src="img/name.png" alt="" /></div>
-          <div class="bg09"><img src="img/contact.svg" alt="" /></div>
-          <div class="telContact"><img src="img/contact-tel.svg" alt="" /></div>
+          <div class="bg07">
+            <img src="img/flower.png" alt="꽃모양이미지" />
+          </div>
+          <div class="bg08"><img src="img/name.png" alt="이름택이미지" /></div>
+          <div class="bg09"><img src="img/contact.svg" alt="contact" /></div>
+          <div class="telContact"><img src="img/contact_tel.svg" alt="" /></div>
         </li>
       </ul>
 
