--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
       </div>
       <div class="line01"></div>
       <div class="bar"><i class="fa-solid fa-bars"></i></div>
+     
+
+         <div class="modal_menu">
+        <ul class="mo_menu">
+          <li><a href="#con01">Home</a></li>
+          <li><a href="#con02" >About Me
+          </a></li>
+          <li><a href="#con03" >My Profile</a></li>
+          <li><a href="#con04">ILLUSTRATION</a></li>
+           <li><a href="#con05">PROJECT</a></li>
+            <li><a href="#con06">CONTACT</a></li>
+        </ul>
+        <div class="close">
+          <i class="fa-solid fa-xmark"></i>
+        </div>
     </header>
     <div id="con01">
       <div class="title">
