--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <img src="img/name.png" alt="" />
         </div>
         <div class="web">
-          <img src="img/webdesign.png" alt="" />
+          <img src="img/web design.svg" alt="" />
         </div>
         <div class="work">
           <img src="img/work.png" alt="" />
@@ -75,7 +75,7 @@
         <div class="left">
           <div class="aboutMe">
             <h2>ABOUT <span>ME</span></h2>
-            <div class="design"><img src="img/web design01.png" alt="" /></div>
+            <div class="design"><img src="img/web design.svg" alt="" /></div>
           </div>
           <div class="textBox">
             <span class="text"></span>
@@ -122,7 +122,10 @@
           <li>
             <div class="career"><img src="img/career.png" alt="" /></div>
             <h3>CAREER</h3>
-            <p>2008 . 12 ~ 2025 .11 패션스타일리스트취업</p>
+            <div class="txtBox03">
+            <p>2008 . 12 ~ 2025 .11 패션스타일리스트취업 </p>
+            <img src="img/click.svg" alt="">
+            </div>
           </li>
           <li>
             <div class="certificate">
@@ -132,6 +135,12 @@
             <p class="text01">2025 .5 GTQ 포토샵 1급 자격증</p>
           </li>
         </ul>
+      </div>
+      <div class="modalCareer scrollBar ">
+        <img src="img/career-view.jpg" alt="">
+     <div class="close">
+          <i class="fa-solid fa-xmark"></i>
+        </div>
       </div>
     </div>
     <div id="con04">
@@ -192,7 +201,7 @@
         <p>Portfolio - / 2025</p>
       </div>
       </div>
-      <div id="con05">
+     <div id="con05">
         <div class="title">
           <img src="img/project.svg" alt="" />
         </div>
@@ -351,6 +360,6 @@
         <div class="line02"></div>
         <p>Portfolio - / 2025</p>
       </div>
-    </div>
+    </div> 
   </body>
 </html>
